# sudoku_haskell

./: README.md
sudoku/: boards.txt  package.yaml  solved_board.txt  start_board.txt  sudoku.cabal
sudoku/.stack-work/: stack.sqlite3
sudoku/.stack-work/ghci/c27d3bc4/: cabal_macros.h
sudoku/.stack-work/ghci/f124960b/: cabal_macros.h
sudoku/.stack-work/ghci/ffe49b6a/: cabal_macros.h
sudoku/.stack-work/install/x86_64-osx/2ce660428f3c267fa30995bf3a0f861ac37c4ed5840a53b6cba93b99ce9ff5b9/8.10.3/lib/x86_64-osx-ghc-8.10.3/sudoku-0.1.0.0-3ayhNbPl7aa3Y1UUZyJL2w/: Paths_sudoku.hi
sudoku/src/: Main.hs  game  game.hi  game.hs
