name:                sudoku
version:             0.1.0.0
synopsis:            Sudoku Game for CS 557 FL
description:         See README.md
homepage:            https://github.com/githubuser/sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Cosimo Gonnelli & Jane Seigman
-- maintainer:          
copyright:           2021 Cosimo Gonnelli & Jane Seigman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sudoku
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Game
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
